--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP-Bore-TCP-Fixed
+name: RDP-TCP-LocalhostRun
 
 on:
   workflow_dispatch:
@@ -13,7 +13,8 @@ jobs:
         run: |
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-          netsh advfirewall firewall add rule name="RDP" dir=in action=allow protocol=TCP localport=3389
+          # Mở full quyền cho RDP trên Firewall
+          netsh advfirewall firewall add rule name="RDP-TCP" dir=in action=allow protocol=TCP localport=3389
           Restart-Service -Name TermService -Force
 
       - name: Create RDP User
@@ -24,41 +25,39 @@ jobs:
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
 
-      - name: Install & Run Bore
+      - name: Open Tunnel (Localhost.run)
+        shell: cmd
         run: |
-          Invoke-WebRequest -Uri "https://github.com/ekzhang/bore/releases/download/v0.5.1/bore-v0.5.1-x86_64-pc-windows-msvc.zip" -OutFile "bore.zip"
-          Expand-Archive -Path "bore.zip" -DestinationPath "."
-          # Chạy bore và ghi log vào bore.txt
-          Start-Process -FilePath ".\bore.exe" -ArgumentList "local 3389 --to bore.pub" -RedirectStandardOutput "bore.txt" -NoNewWindow
-          
+          # Dùng SSH chuẩn để forward cổng 3389 qua localhost.run
+          # -o StrictHostKeyChecking=no để tránh dừng lại hỏi xác thực
+          start /b ssh -o StrictHostKeyChecking=no -R 80:localhost:3389 nokey@localhost.run > tunnel_log.txt 2>&1
+
       - name: Get Connection Address
         run: |
-          Write-Host "Đang chờ Bore cấp phát cổng kết nối..."
-          # Đợi lâu hơn một chút để đảm bảo log đã được ghi
-          Start-Sleep -Seconds 15
+          Write-Host "Đang lấy địa chỉ kết nối..."
+          Start-Sleep -Seconds 20
           
-          $logContent = Get-Content -Path "bore.txt" -Raw
-          Write-Host "--- Nội dung Log Bore ---"
-          Write-Host $logContent
-          Write-Host "------------------------"
+          $log = Get-Content tunnel_log.txt -Raw
+          Write-Host "Raw Log: $log"
           
-          # Tìm kiếm địa chỉ bằng Regex
-          if ($logContent -match "bore\.pub:\d+") {
-              $addr = $matches[0]
+          # Lọc lấy địa chỉ .lhr.life (đây là domain của localhost.run)
+          if ($log -match "([a-zA-Z0-9-]+\.lhr\.life)") {
+              $addr = $matches[1]
               Write-Host "`n========================================" -ForegroundColor Green
-              Write-Host "KẾT NỐI RDP THÀNH CÔNG!" -ForegroundColor Green
-              Write-Host "Địa chỉ: $addr" -ForegroundColor Cyan
+              Write-Host "ĐỊA CHỈ KẾT NỐI RDP MỚI" -ForegroundColor Green
+              Write-Host "Address: $addr" -ForegroundColor Cyan
               Write-Host "User: RDP" -ForegroundColor Cyan
               Write-Host "Pass: Oibanoi874@" -ForegroundColor Cyan
+              Write-Host "----------------------------------------"
+              Write-Host "Mở mstsc và nhập: $addr" -ForegroundColor Yellow
               Write-Host "========================================`n"
           } else {
-              Write-Error "Lỗi: Không tìm thấy địa chỉ trong log. Thử kiểm tra nội dung log ở trên."
-              exit 1
+              Write-Error "Không lấy được địa chỉ. Thử chạy lại workflow hoặc kiểm tra log trên."
           }
 
       - name: Keep Alive
         run: |
           while ($true) {
-              Write-Host "[$(Get-Date)] Duy trì kết nối RDP qua Bore..."
+              Write-Host "[$(Get-Date)] RDP Server đang chạy..."
               Start-Sleep -Seconds 300
           }
